--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,6 +9,7 @@ on:
     branches:
       - main
       - develop
+  workflow_dispatch: # For manual rollback triggers
 
 jobs:
   ci_dev:
@@ -18,30 +19,47 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
+      - name: Extract Sprint Folder from Branch Name
+        id: sprint
+        run: |
+          BRANCH_NAME=${GITHUB_REF##*/}
+          SPRINT_FOLDER=$(echo $BRANCH_NAME | sed 's/feature\///')
+          echo "SPRINT_FOLDER=$SPRINT_FOLDER" >> $GITHUB_ENV
 
-      - name: Install Dependencies
-        run: pip install -r requirements.txt
+      - name: Install Docker Compose
+        run: sudo apt-get update && sudo apt-get install -y docker-compose
 
-      - name: Validate SQL Scripts
-        run: python wait_for_sqlserver.py --validate-sql-scripts
-
-      - name: Build and Run Dev Environment
+      - name: Start Dev Environment with Docker Compose
         env:
           ENV_FILE: .env.dev
         run: |
           cp ${ENV_FILE} .env
           docker-compose -f docker-compose.yml --env-file ${ENV_FILE} up --build -d dev_sqlserver
 
-      - name: Run Migrations in Dev
+      - name: Execute DB Scripts for Dev
         env:
           ENV_FILE: .env.dev
+          SPRINT_FOLDER: ${{ env.SPRINT_FOLDER }}
         run: |
-          cp ${ENV_FILE} .env
-          python wait_for_sqlserver.py --migrate dev
+          source ${ENV_FILE}
+          docker exec -i dev_sqlserver /bin/bash -c "
+            for file in /var/opt/sqlserver/db/${SPRINT_FOLDER}/Exec/*.sql; do
+              SCRIPT_NAME=\$(basename \"\$file\")
+              EXISTS=\$(/opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -Q \"SELECT COUNT(1) FROM ExecutedScripts WHERE ScriptName = '\$SCRIPT_NAME'\" -h -1)
+              if [ \"\$EXISTS\" -eq 0 ]; then
+                echo \"Executing \$SCRIPT_NAME...\"
+                /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -i \"\$file\"
+                if [ \$? -eq 0 ]; then
+                  /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Success')\"
+                else
+                  /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Failure')\"
+                  exit 1
+                fi
+              else
+                echo \"Skipping already executed script: \$SCRIPT_NAME\"
+              fi
+            done
+          "
 
   cd_qa:
     name: Deploy to QA with Approval
@@ -55,21 +73,67 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Build and Run QA Environment
+      - name: Extract Sprint Folder from Branch Name
+        id: sprint
+        run: |
+          BRANCH_NAME=${GITHUB_REF##*/}
+          SPRINT_FOLDER=$(echo $BRANCH_NAME | sed 's/feature\///')
+          echo "SPRINT_FOLDER=$SPRINT_FOLDER" >> $GITHUB_ENV
+
+      - name: Start QA Environment with Docker Compose
         env:
           ENV_FILE: .env.qa
         run: |
           cp ${ENV_FILE} .env
           docker-compose -f docker-compose.yml --env-file ${ENV_FILE} up --build -d qa_sqlserver
 
-      - name: Run Migrations in QA
+      - name: Execute DB Scripts for QA
         env:
           ENV_FILE: .env.qa
+          SPRINT_FOLDER: ${{ env.SPRINT_FOLDER }}
         run: |
-          cp ${ENV_FILE} .env
-          python wait_for_sqlserver.py --migrate qa
+          source ${ENV_FILE}
+          docker exec -i qa_sqlserver /bin/bash -c "
+            for file in /var/opt/sqlserver/db/${SPRINT_FOLDER}/Exec/*.sql; do
+              SCRIPT_NAME=\$(basename \"\$file\")
+              EXISTS=\$(/opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -Q \"SELECT COUNT(1) FROM ExecutedScripts WHERE ScriptName = '\$SCRIPT_NAME'\" -h -1)
+              if [ \"\$EXISTS\" -eq 0 ]; then
+                echo \"Executing \$SCRIPT_NAME...\"
+                /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -i \"\$file\"
+                if [ \$? -eq 0 ]; then
+                  /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Success')\"
+                else
+                  /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Failure')\"
+                  exit 1
+                fi
+              else
+                echo \"Skipping already executed script: \$SCRIPT_NAME\"
+              fi
+            done
+          "
 
       - name: Approval Required for QA Deployment
         uses: hmarr/auto-approve-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  rollback:
+    name: Rollback Scripts
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch' # Manual trigger only
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Execute Rollback Scripts
+        env:
+          ENV_FILE: .env.${{ github.event.inputs.env }}
+          SPRINT_FOLDER: ${{ github.event.inputs.sprint }}
+        run: |
+          source ${ENV_FILE}
+          docker exec -i ${GITHUB_EVENT_INPUTS_ENV}_sqlserver /bin/bash -c "
+            for file in /var/opt/sqlserver/db/${SPRINT_FOLDER}/Rollback/*.sql; do
+              echo \"Executing rollback: \$file...\"
+              /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -i \"\$file\"
+            done
+          "
