--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,26 +33,28 @@ jobs:
         env:
           ENV_FILE: .env.dev
         run: |
-          cp ${ENV_FILE} .env
           docker-compose -f docker-compose.yml --env-file ${ENV_FILE} up --build -d dev_sqlserver
 
       - name: Execute DB Scripts for Dev
         env:
           ENV_FILE: .env.dev
+          SQL_SERVER: ${{ env.SQL_SERVER }}
+          DATABASE: ${{ env.DATABASE }}
+          DBUID: ${{ env.DBUID }}
+          DBPWD: ${{ env.DBPWD }}
           SPRINT_FOLDER: ${{ env.SPRINT_FOLDER }}
         run: |
-          source ${ENV_FILE}
           docker exec -i dev_sqlserver /bin/bash -c "
             for file in /var/opt/sqlserver/db/${SPRINT_FOLDER}/Exec/*.sql; do
               SCRIPT_NAME=\$(basename \"\$file\")
-              EXISTS=\$(/opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -Q \"SELECT COUNT(1) FROM ExecutedScripts WHERE ScriptName = '\$SCRIPT_NAME'\" -h -1)
+              EXISTS=\$(/opt/mssql-tools/bin/sqlcmd -S $SQL_SERVER -U $DBUID -P $DBPWD -d $DATABASE -Q \"SELECT COUNT(1) FROM ExecutedScripts WHERE ScriptName = '\$SCRIPT_NAME'\" -h -1)
               if [ \"\$EXISTS\" -eq 0 ]; then
                 echo \"Executing \$SCRIPT_NAME...\"
-                /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -i \"\$file\"
+                /opt/mssql-tools/bin/sqlcmd -S $SQL_SERVER -U $DBUID -P $DBPWD -d $DATABASE -i \"\$file\"
                 if [ \$? -eq 0 ]; then
-                  /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Success')\"
+                  /opt/mssql-tools/bin/sqlcmd -S $SQL_SERVER -U $DBUID -P $DBPWD -d $DATABASE -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Success')\"
                 else
-                  /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Failure')\"
+                  /opt/mssql-tools/bin/sqlcmd -S $SQL_SERVER -U $DBUID -P $DBPWD -d $DATABASE -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Failure')\"
                   exit 1
                 fi
               else
@@ -84,26 +86,28 @@ jobs:
         env:
           ENV_FILE: .env.qa
         run: |
-          cp ${ENV_FILE} .env
           docker-compose -f docker-compose.yml --env-file ${ENV_FILE} up --build -d qa_sqlserver
 
       - name: Execute DB Scripts for QA
         env:
           ENV_FILE: .env.qa
+          SQL_SERVER: ${{ env.SQL_SERVER }}
+          DATABASE: ${{ env.DATABASE }}
+          DBUID: ${{ env.DBUID }}
+          DBPWD: ${{ env.DBPWD }}
           SPRINT_FOLDER: ${{ env.SPRINT_FOLDER }}
         run: |
-          source ${ENV_FILE}
           docker exec -i qa_sqlserver /bin/bash -c "
             for file in /var/opt/sqlserver/db/${SPRINT_FOLDER}/Exec/*.sql; do
               SCRIPT_NAME=\$(basename \"\$file\")
-              EXISTS=\$(/opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -Q \"SELECT COUNT(1) FROM ExecutedScripts WHERE ScriptName = '\$SCRIPT_NAME'\" -h -1)
+              EXISTS=\$(/opt/mssql-tools/bin/sqlcmd -S $SQL_SERVER -U $DBUID -P $DBPWD -d $DATABASE -Q \"SELECT COUNT(1) FROM ExecutedScripts WHERE ScriptName = '\$SCRIPT_NAME'\" -h -1)
               if [ \"\$EXISTS\" -eq 0 ]; then
                 echo \"Executing \$SCRIPT_NAME...\"
-                /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -i \"\$file\"
+                /opt/mssql-tools/bin/sqlcmd -S $SQL_SERVER -U $DBUID -P $DBPWD -d $DATABASE -i \"\$file\"
                 if [ \$? -eq 0 ]; then
-                  /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Success')\"
+                  /opt/mssql-tools/bin/sqlcmd -S $SQL_SERVER -U $DBUID -P $DBPWD -d $DATABASE -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Success')\"
                 else
-                  /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Failure')\"
+                  /opt/mssql-tools/bin/sqlcmd -S $SQL_SERVER -U $DBUID -P $DBPWD -d $DATABASE -Q \"INSERT INTO ExecutedScripts (ScriptName, Status) VALUES ('\$SCRIPT_NAME', 'Failure')\"
                   exit 1
                 fi
               else
@@ -116,24 +120,3 @@ jobs:
         uses: hmarr/auto-approve-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-
-  rollback:
-    name: Rollback Scripts
-    runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch' # Manual trigger only
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Execute Rollback Scripts
-        env:
-          ENV_FILE: .env.${{ github.event.inputs.env }}
-          SPRINT_FOLDER: ${{ github.event.inputs.sprint }}
-        run: |
-          source ${ENV_FILE}
-          docker exec -i ${GITHUB_EVENT_INPUTS_ENV}_sqlserver /bin/bash -c "
-            for file in /var/opt/sqlserver/db/${SPRINT_FOLDER}/Rollback/*.sql; do
-              echo \"Executing rollback: \$file...\"
-              /opt/mssql-tools/bin/sqlcmd -S localhost -U \$DB_USER -P \$DB_PASSWORD -d \$DB_NAME -i \"\$file\"
-            done
-          "
