Test CI/CD with ITBMSPR-00001 scripts

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,6 +29,15 @@ jobs:
       - name: Install Docker Compose
         run: sudo apt-get update && sudo apt-get install -y docker-compose
 
+      - name: Generate .env.dev for Docker Compose
+        run: |
+            echo "SQL_SERVER=${{ secrets.SQL_SERVER_DEV }}" > .env.dev
+            echo "DATABASE=${{ secrets.DATABASE_DEV }}" >> .env.dev
+            echo "DBUID=${{ secrets.DBUID_DEV }}" >> .env.dev
+            echo "DBPWD=${{ secrets.DBPWD_DEV }}" >> .env.dev
+            echo "SQL_PORT=1401" >> .env.dev
+            echo "APP_PORT=5001" >> .env.dev
+      
       - name: Start Dev Environment with Docker Compose
         env:
           ENV_FILE: .env.dev
@@ -82,6 +91,15 @@ jobs:
           SPRINT_FOLDER=$(echo $BRANCH_NAME | sed 's/feature\///')
           echo "SPRINT_FOLDER=$SPRINT_FOLDER" >> $GITHUB_ENV
 
+      - name: Generate .env.qa for Docker Compose
+        run: |
+            echo "SQL_SERVER=${{ secrets.SQL_SERVER_QA }}" > .env.qa
+            echo "DATABASE=${{ secrets.DATABASE_QA }}" >> .env.qa
+            echo "DBUID=${{ secrets.DBUID_QA }}" >> .env.qa
+            echo "DBPWD=${{ secrets.DBPWD_QA }}" >> .env.qa
+            echo "SQL_PORT=1402" >> .env.qa
+            echo "APP_PORT=5002" >> .env.qa
+      
       - name: Start QA Environment with Docker Compose
         env:
           ENV_FILE: .env.qa
