Test CI/CD with ITBMSPR-00001 4. added environment:dev

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,7 +15,7 @@ jobs:
   ci_dev:
     name: Continuous Integration for Dev
     runs-on: ubuntu-latest
-    environment: myenvironment
+    environment: dev
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
