Test CI/CD with ITBMSPR-00001 5. secrets: inherit

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,6 +16,7 @@ jobs:
     name: Continuous Integration for Dev
     runs-on: ubuntu-latest
     environment: dev
+    secrets: inherit
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
