--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - ./run-sqlserver.sh:/usr/bin/run-sqlserver.sh:ro  # Mount the script into the container
       - ${FLASK_ENV}_init_status:/var/shared  # Mount the shared volume to SQL Server container
       - ${SQL_SERVER}_data:/var/opt/mssql  # Environment-specific data volume
+      - ./db:/var/opt/sqlserver/db:ro  # Mount the db folder to the container
     networks:
       - "${FLASK_ENV}-net"
     command: /bin/bash /usr/bin/run-sqlserver.sh
