--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -48,6 +48,20 @@ jobs:
                 echo "Secret is not set."
             fi
     
+      - name: Install Ngrok
+        run: |
+            curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
+            echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list >/dev/null
+            sudo apt update && sudo apt install ngrok
+        
+      - name: Start Ngrok for SQL Server
+        run: |
+            ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+            nohup ngrok tcp 1401 --log=stdout &
+        
+      - name: Retrieve Ngrok Public Address
+        run: curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url'
+      
       - name: Start Dev Environment with Docker Compose
         env:
           ENV_FILE: .env.dev
