--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   ci_dev:
     name: Continuous Integration for Dev
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     environment: dev
     steps:
       - name: Checkout Code
