Checkin feature/ITBMSPR-00001 10. shell: cmd

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -53,6 +53,7 @@ jobs:
         run: |
           docker-compose -f docker-compose.yml --env-file $ENV_FILE -p dev up --build -d
           docker ps -a
+        shell: cmd
 
       - name: Execute DB Scripts for Dev
         env:
